--- a/EMS.UI/EMS.csproj
+++ b/EMS.UI/EMS.csproj
@@ -12,7 +12,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EmployeeRegistrationusing_angular_and_mvc</RootNamespace>
-    <AssemblyName>EmployeeRegistrationusing angular and mvc</AssemblyName>
+    <AssemblyName>EmployeeRegistrationusing_angular_and_mvc</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -169,8 +169,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Datamodels\TestModel.cs" />
     <Compile Include="Models\EmployeeMasterContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\testcontext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -243,6 +245,7 @@
     <Content Include="assets\js\angular-resource.js" />
     <Content Include="assets\js\angular-route.js" />
     <Content Include="assets\js\angular.js" />
+    <Content Include="assets\js\application\app.js" />
     <Content Include="assets\js\bootstrap-progressbar.js" />
     <Content Include="assets\js\bootstrap.js" />
     <Content Include="assets\js\custom.js" />
@@ -258,7 +261,7 @@
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\JS Controllers\EmployeeRegistration - Copy.js" />
     <Content Include="Content\Scripts\JS Controllers\EmployeeRegistration.js" />
-    <Content Include="Content\Scripts\JS Controllers\TestController.js" />
+    <Content Include="assets\js\controllers\TestController.js" />
     <Content Include="Content\Scripts\JS Controllers\themes\base\accordion.css" />
     <Content Include="Content\Scripts\JS Controllers\themes\base\all.css" />
     <Content Include="Content\Scripts\JS Controllers\themes\base\autocomplete.css" />
