--- a/EMS.UI/Web.config
+++ b/EMS.UI/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
 
-    <add name="EmployeeMasterContext" connectionString="Data Source=SHJSERVER1; initial catalog=EmployeeRajitest; uid=sa; pwd=shjdev@2016; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="TESTDB" connectionString="Data Source=SHJSERVER1; initial catalog=EmployeeRajitest; uid=sa; pwd=shjdev@2016; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
