--- a/EMS.UI/EMS.csproj
+++ b/EMS.UI/EMS.csproj
@@ -171,6 +171,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Datamodels\TestModel.cs" />
+    <Compile Include="Models\Datamodels\TrngData.cs" />
     <Compile Include="Models\EmployeeMasterContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\testcontext.cs" />
@@ -196,6 +197,7 @@
     <Content Include="assets\css\theme-color\purple-theme.css" />
     <Content Include="assets\css\theme-color\red-theme.css" />
     <Content Include="assets\css\toastr.min.css" />
+    <Content Include="assets\css\trNgGrid.css" />
     <Content Include="assets\images\amazon.png" />
     <Content Include="assets\images\blog-img-1.jpg" />
     <Content Include="assets\images\blog-img-2.jpg" />
@@ -257,6 +259,7 @@
     <Content Include="assets\js\jquery.mixitup.js" />
     <Content Include="assets\js\slick.js" />
     <Content Include="assets\js\toastr.min.js" />
+    <Content Include="assets\js\trNgGrid.js" />
     <Content Include="assets\js\waypoints.js" />
     <Content Include="assets\js\wow.js" />
     <Content Include="Content\ANI.jpg" />
@@ -1188,8 +1191,8 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Scripts\version.json" />
-    <Content Include="Views\EmployeeRegistration\EmployeeRegistration.cshtml" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Test\TrNgGridExample.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
