--- a/EMS.UI/EMS.csproj
+++ b/EMS.UI/EMS.csproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\css\animate.css" />
+    <Content Include="assets\css\bootstrap-datepicker3.css" />
     <Content Include="assets\css\bootstrap-progressbar-3.3.4.css" />
     <Content Include="assets\css\bootstrap.css" />
     <Content Include="assets\css\font-awesome.css" />
@@ -250,6 +251,7 @@
     <Content Include="assets\js\angular-route.js" />
     <Content Include="assets\js\angular.js" />
     <Content Include="assets\js\application\app.js" />
+    <Content Include="assets\js\bootstrap-datepicker.min.js" />
     <Content Include="assets\js\bootstrap-progressbar.js" />
     <Content Include="assets\js\bootstrap.js" />
     <Content Include="assets\js\custom.js" />
@@ -1193,6 +1195,7 @@
     <Content Include="Scripts\version.json" />
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\Test\TrNgGridExample.cshtml" />
+    <Content Include="Views\EmployeeRegistration\EmployeeRegistration.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
